<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Paper and Pens</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Welcome">Welcome to this Text-based Game</string>
    <string name="ng">New Game</string>
    <string name="load">Load Game</string>
    <string name="intro">Greetings Traveler! May I ask you who you are?</string>
    <string name="submit">Submit</string>
    <string name="name">name</string>
    <string name="exit">Exit</string>
    <string name="warrior">Warrior</string>
    <string name="Mage">Mage</string>
   
    <string name="rogue">Thief</string>
    <string name="next">Next</string>
    <string name="prev">Prev</string>
    <string name="reroll">Reroll</string>
    <string name="attack">Attack</string>
    <string name="def">Defend</string>
    <string name="skill">Skill</string>
    <string name="flee">GTFO</string>

</resources>
