<?xml version="1.0" encoding="utf-8"?>
<!--

 
 *Copyright (C)2013 Peter Keomanvianh
 *[This program is licensed under the "GNU License"]
 *Please see the file LICENSE in https://github.com/Exeia/Paper-and-Pens/blob/master/License.txt
 *or in the source
 *distribution of this software for license terms.

-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    
    
    <TextView
        android:id="@+id/bStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/hello_world" />

    <Button
        android:id="@+id/atk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="181dp"
        android:gravity="center"
        android:text="@string/attack"
        android:textSize="15sp" />
     <Button
        android:id="@+id/skill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/atk"
        android:layout_alignBottom="@+id/atk"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:text="@string/skill"
        android:textSize="15sp" />

     <Button
         android:id="@+id/flee"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_marginBottom="78dp"
         android:gravity="center"
         android:text="@string/flee"
         android:textSize="15sp" />

      <Button
          android:id="@+id/def"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignBaseline="@+id/flee"
          android:layout_alignBottom="@+id/flee"
          android:layout_alignParentRight="true"
          android:gravity="center"
          android:text="@string/def"
          android:textSize="15sp" />

</RelativeLayout>
