<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Welcome" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
      	android:textSize="25dp"
        android:text="@string/Welcome" />

	<Button
	    android:id="@+id/newGame"
	    android:layout_width="250dp"
	    android:layout_height="wrap_content"
	    android:layout_centerHorizontal="true"
	    android:layout_centerVertical="true"
	    android:text="@string/ng" />

	<Button
	    android:id="@+id/loadGame"
	    android:layout_width="250dp"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/newGame"
	    android:layout_below="@+id/newGame"
	    android:layout_marginTop="38dp"
	    android:text="@string/load" />

</RelativeLayout>