<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
<TextView 
    android:id="@+id/title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:gravity="center"
    android:layout_gravity="center"
    android:text="@string/hello_world"
    android:textSize="25sp"
    />

<TextView
    android:id="@+id/info"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_below="@+id/title"
    android:layout_marginTop="38dp"
    android:gravity="left"
    android:text="@string/hello_world"
    android:textSize="20sp" />
<Button
    android:id="@+id/back"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="53dp"
    android:text="@string/next" />

<TextView
    android:id="@+id/stat"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_below="@+id/info"
    android:layout_marginTop="142dp"
    android:gravity="left"
    android:text="@string/hello_world"
    android:textSize="20sp" />

<Button
    android:id="@+id/reroll"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:layout_above="@+id/back"
    android:layout_alignParentLeft="true"
    android:layout_marginBottom="26dp"
    android:text="@string/reroll" />

</RelativeLayout>
