<?xml version="1.0" encoding="utf-8"?>
<!--

 
 *Copyright (C)2013 Peter Keomanvianh
 *[This program is licensed under the "GNU License"]
 *Please see the file LICENSE in https://github.com/Exeia/Paper-and-Pens/blob/master/License.txt
 *or in the source
 *distribution of this software for license terms.

-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/choice1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/start"
        android:layout_marginTop="230dp"
        android:gravity="left"
        android:text="@string/hello_world"
        android:textSize="15sp" />

    <Button
        android:id="@+id/choice2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/choice1"
        android:gravity="left"
        android:text="@string/ng"
        android:textSize="15sp" />

    <Button
        android:id="@+id/choice3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/choice2"
        android:gravity="left"
        android:text="@string/load"
        android:textSize="15sp" />

    <Button
        android:id="@+id/choice4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/choice3"
        android:gravity="left"
        android:text="@string/load"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="84dp"
        android:gravity="center"
        android:text="@string/hello_world"
        android:textSize="15sp" />

      <TextView
          android:id="@+id/response"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentLeft="true"
          android:layout_alignParentTop="true"
          android:gravity="center"
          android:text="@string/hello_world"
          android:textSize="15sp" />

      <Button
          android:id="@+id/Items"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentBottom="true"
          android:layout_alignParentRight="true"
          android:layout_marginBottom="45dp"
          android:text="Items" />

</RelativeLayout>